--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,10 @@ h4 {
   background-color: #7BC4F9 !important;
 }
 
+.color19 {
+  background-color: transparent !important;
+}
+
 .textcolor1 {
   color: #7DDF9B !important;
 }
