--- a/css/style.css
+++ b/css/style.css
@@ -8617,6 +8617,35 @@ section.math-hach>.seven-section>.seven-section-block {
   background: #8dc5ff;
 }
 
+.napravlenia_spisok {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 40px;
+}
+
+.napravlenia_spisok>li {
+  font-family: 'Nunito-Bold';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 20px;
+  color: #24201D;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+
+.napravlenia_spisok>li:before {
+  background: #F3D04F;
+  width: 10px;
+  height: 10px;
+  content: '';
+  display: block;
+  border-radius: 50%;
+}
+
 @media (max-width: 1151px) {
   .efficiency-srscola_angl>div:nth-child(2) {
     min-width: 100%;
