--- a/css/style.css
+++ b/css/style.css
@@ -558,7 +558,9 @@ h4 {
 .button-tree:hover {
   border: 1px solid #9C16B9;
   background: #9C16B9;
+  color: #fff;
   transition: background 0.5s ease;
+  text-decoration: none;
 }
 
 .section-block-button {
